--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: #ff9900;
+	background: $black;
   font: 18px/1.4 $helvetica;
-  color: #ff9900;
+  color: $black;
 }
 
 .container {
