--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: https://www.walldevil.com/wallpapers/a81/wallpaper-wallpapers-black-abstract-plinde-albums-dwynariel-first-grafik-white-lines-farbe-lilzeu-tattoo.jpg;
+	background-image: https://www.walldevil.com/wallpapers/a81/wallpaper-wallpapers-black-abstract-plinde-albums-dwynariel-first-grafik-white-lines-farbe-lilzeu-tattoo.jpg;
   font: 18px/1.4 $helvetica;
   color: #ff9900;
 }
