--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,7 @@ table, th {
     border-radius: 3px;
     border-collapse: collapse;
     padding: 15px;
-    background: linear-gradient(to bottom, #000000, #f2f2f2);
+    background: linear-gradient(to bottom, #9900cc, #9900cc);
     text-align: left;
 }
 
